--- a/playbooks/roles/jenkins_common/templates/config/security.yml.j2
+++ b/playbooks/roles/jenkins_common/templates/config/security.yml.j2
@@ -1,4 +1,10 @@
 ---
+AGENT_SETTINGS:
+    PROTOCOLS:
+{% for protocol in jenkinc_common_security_agent_protocols %}
+      - {{ protocol }}
+{% endfor %}
+    JNC_TCP_PORT: {{ jenkins_common_security_agent_jnc_tcp_port }}
 OAUTH_SETTINGS:
   GITHUB_WEB_URI: 'https://github.com'
   GITHUB_API_URI: 'https://api.github.com'
