--- a/playbooks/roles/jenkins_common/templates/config/security.yml.j2
+++ b/playbooks/roles/jenkins_common/templates/config/security.yml.j2
@@ -4,7 +4,7 @@ AGENT_SETTINGS:
 {% for protocol in jenkins_common_security_agent_protocols %}
       - {{ protocol }}
 {% endfor %}
-    JNC_TCP_PORT: {{ jenkins_common_security_agent_jnc_tcp_port }}
+    JNLP_TCP_PORT: {{ jenkins_common_security_agent_jnlp_tcp_port }}
 OAUTH_SETTINGS:
   GITHUB_WEB_URI: 'https://github.com'
   GITHUB_API_URI: 'https://api.github.com'
